# slimelearn.py

./: LICENSE  README.md  pyproject.toml  setup.py  slimelearn.py
examples/: Basics.py  BruteForce.py
slimelearn/: __init__.py
slimelearnpy/: __init__.py  slimelearn.py
